# mvs-texturing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/meshtest/: meshtest.cpp
apps/test_gen_views/: CMakeLists.txt  test_gen_views.cpp
apps/texrecon/: CMakeLists.txt  texrecon.cpp
elibs/: CMakeLists.txt
libs/: CMakeLists.txt
libs/mask/: CMakeLists.txt  euclidean_view_mask.cpp  euclidean_view_mask.h  triangle_voxel_intersection.cpp  triangle_voxel_intersection.h
libs/mvs_tex_mask/: CMakeLists.txt  euclidean_view_mask.cpp  euclidean_view_mask.h  triangle_voxel_intersection.cpp  triangle_voxel_intersection.h
libs/mvs_tex_wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
libs/tex/: BUILD.bazel  CMakeLists.txt  build_adjacency_graph.cpp  build_obj_model.cpp  calculate_data_costs.cpp  debug.h  generate_debug_embeddings.cpp  generate_texture_atlases.cpp  generate_texture_patches.cpp  generate_texture_views.cpp  global_seam_leveling.cpp  histogram.cpp  histogram.h  local_seam_leveling.cpp  material_lib.cpp  material_lib.h  obj_model.cpp  obj_model.h  poisson_blending.cpp  poisson_blending.h  prepare_mesh.cpp  progress_counter.h  rect.h  rectangular_bin.cpp  rectangular_bin.h  seam_leveling.cpp  seam_leveling.h  settings.h  sparse_table.h  texture_atlas.cpp  texture_atlas.h  texture_patch.cpp  texture_patch.h  texture_view.cpp  texture_view.h  texturing.h  timer.cpp  timer.h  tri.cpp  tri.h  (+4 more)
libs/texture_wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
libs/wrapper/: CMakeLists.txt  wrapper.cpp  wrapper.h
